<resources>
    <string name="app_name">Use Monitor</string>
    <string name="title_devices">Monitor Scan</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic"> Unknown Characteristic </string>
    <string name="no_data">No Data Recorded</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_scan">Scan</string>
    <string name="no_ble">BLE is not supported on this device</string>
    <string name="maintenance">Weed whacker likely requires maintenance</string>
    <string name="total_use_time_minutes">Total Use Since Last Maintenance (minutes):</string>
    <string name="most_recent_use_time_minutes">Most Recent Use Time (minutes):</string>
    <string name="weedwhacker_serviced">Weedwhacker Serviced</string>
</resources>
